@@ -1,6 +1,10 @@
 plugins {
+    id 'application'
     id 'java'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
+
 
 group = 'org.example'
 version = '1.0-SNAPSHOT'
@@ -10,10 +14,67 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.openjfx:javafx-controls:21'
+    implementation 'org.openjfx:javafx-fxml:21'
+    implementation 'org.apache.poi:poi-ooxml:5.2.3'
+    implementation 'org.apache.pdfbox:pdfbox:2.0.29'
+    implementation 'org.apache.commons:commons-text:1.10.0'
+
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
+application {
+    mainClass = 'org.example.Main' // Убедись, что путь к классу правильный
+}
+
+javafx {
+    version = "21"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    platform = 'win'
+}
+
 test {
     useJUnitPlatform()
+}
+
+import org.gradle.internal.os.OperatingSystem
+
+def isWindows = OperatingSystem.current().isWindows()
+
+def appName = "Document Helper"
+
+application {
+    mainClass = 'org.example.Main'
+}
+
+tasks.register('packageApp', Exec) {
+    dependsOn shadowJar
+
+    def outputDir = "$buildDir/dist"
+
+    doFirst {
+        mkdir outputDir
+    }
+    commandLine = [
+            "jpackage",
+            "--type", "app-image",
+            "--input", "build/libs",
+            "--dest", outputDir,
+            "--name", "DocumentsHelper",
+            "--main-jar", "documents-helper-all-1.0.jar",
+            "--main-class", "org.example.Main",
+            "--java-options", "--add-modules=javafx.controls,javafx.fxml",
+            "--java-options", "-Dfile.encoding=UTF-8",
+            "--verbose",
+            "--java-options", "--module-path=openjfx-24.0.1_windows-x64_bin-sdk/javafx-sdk-24.0.1/lib"
+    ]
+
+}
+shadowJar {
+    archiveBaseName.set('documents-helper-all')
+    archiveClassifier.set('')
+    archiveVersion.set('1.0')
+    mergeServiceFiles()
 }
